# Priority-comparison

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: workflow.yml
priocomp/: __init__.py  prioritycomparison.py
vp/: __init__.py  prioritycomparison.py  variables_plus.py
