[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "variablesplus"
version = "2.2.3"
description = "A Python package for variables plus"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Egglord" }
]
license = { text = "MIT" }
