[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "priocomp"
version = "1.0.0"
description = "A simple Python library that lets you check comparisons in order of priority (importance)."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Egglord" }
]
license = { text = "MIT" }
